<resources>
    <string name="app_name">My Application</string>
    <string name="facebook">Đăng nhập bằng Facebook</string>
    <string name="user">Nhập email của bạn</string>
    <string name="pass">Nhập mật khẩu</string>
    <string name="repass">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="fot">Quên mật khẩu</string>
    <string name="sign">Đăng ký mới</string>
    <string name="miss">Ghi nhớ đăng nhập</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_fogotuser">fogotuser</string>
    <string name="makepass">Gửi lại mật khẩu</string>
</resources>
