<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="@dimen/logo_width1"
        android:layout_height="@dimen/logo_height1"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_margin="@dimen/logo_top"
        />
    <EditText
        android:id="@+id/edtuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="@dimen/tall10"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:background="@drawable/layout_bg"
        android:padding="@dimen/tall8"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/tall10"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:layout_marginTop="@dimen/logo_top"
        android:background="@drawable/layout_bg"
        android:padding="@dimen/tall8"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:layout_marginTop="@dimen/logo_top"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/login"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#fff"

        />
    <CheckBox
        android:text="@string/miss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:layout_marginTop="@dimen/logo_top"
        android:id="@+id/checkBox"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnforgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/fot"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:paddingLeft="@dimen/logo_top"
            android:paddingRight="@dimen/tall30"
            android:layout_marginTop="@dimen/tall10"
            />
        <Button
            android:id="@+id/btnsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/sign"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:paddingLeft="@dimen/tall40"
            android:paddingRight="@dimen/tall30"
            android:layout_marginLeft="@dimen/tall30"
            android:layout_marginTop="@dimen/tall10"
            />
    </LinearLayout>
</LinearLayout>
