<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="@dimen/logo_width1"
        android:layout_height="@dimen/logo_height1"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_margin="@dimen/logo_top"
        android:id="@+id/imageView" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/tall10"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:background="@drawable/layout_bg"
        android:padding="@dimen/tall8"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edtnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/tall10"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:layout_marginTop="@dimen/logo_top"
        android:background="@drawable/layout_bg"
        android:padding="@dimen/tall8"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/edtrepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repass"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/tall10"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:layout_marginTop="@dimen/logo_top"
        android:background="@drawable/layout_bg"
        android:padding="@dimen/tall8"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnsignok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tall30"
        android:layout_marginRight="@dimen/tall30"
        android:layout_marginTop="@dimen/logo_top"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/sign"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#fff"

        />
</LinearLayout>
